force-app/main/default/objects/Stage__c/fields/Budget_Return_to_Green_Plan__c.field-meta.xml
<CustomField>
    <fullName>Budget_Return_to_Green_Plan__c</fullName>
    <label>Budget Return to Green Plan</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Budget_Assessment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Management is aware of issue, but resolution not yet defined.</fullName>
            </value>
            <value>
                <fullName>Management is aware of issue, and seeking buy-in to resolution path</fullName>
            </value>
            <value>
                <fullName>Other: see comments section</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>