force-app/main/default/objects/Stage__c/fields/Comments_on_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_Deliverables__c</fullName>
    <label>Comments on Deliverables</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>