force-app/main/default/objects/Stage__c/fields/Key_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Key_Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Deliverable</label>
    <referenceTo>Deliverable__c</referenceTo>
    <relationshipLabel>Stages</relationshipLabel>
    <relationshipName>Stages</relationshipName>
    <type>Lookup</type>
</CustomField>