force-app/main/default/objects/Stage__c/fields/Resources_Return_to_Green_Plan__c.field-meta.xml
<CustomField>
    <fullName>Resources_Return_to_Green_Plan__c</fullName>
    <label>Resources Return to Green Plan</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Resources_Assessment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Seeking approval to secure external resources to meet schedule constraints.</fullName>
            </value>
            <value>
                <fullName>Seeking approval to assign incremental resources to meet from other work to meet schedule constraints.</fullName>
            </value>
            <value>
                <fullName>Seeking approval for schedule extension and retain team.</fullName>
            </value>
            <value>
                <fullName>Other: see comments section</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>