force-app/main/default/objects/Stage__c/fields/Scope_Return_to_Green_Plan__c.field-meta.xml
<CustomField>
    <fullName>Scope_Return_to_Green_Plan__c</fullName>
    <label>Scope Return to Green Plan</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Scope_Assessment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Seeking Approval to reduce defined scope to meet budget constraints.</fullName>
            </value>
            <value>
                <fullName>Seeking Approval to reduce defined scope to meet resource constraints.</fullName>
            </value>
            <value>
                <fullName>Seeking Approval to reduce defined scope to meet budget and resource constraints.</fullName>
            </value>
            <value>
                <fullName>Seeking Approval to reduce or revise defined scope due to solution is not viable.</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>