force-app/main/default/objects/Stage__c/fields/Seeking_Management_Support__c.field-meta.xml
<CustomField>
    <fullName>Seeking_Management_Support__c</fullName>
    <label>Seeking Management Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>